# baam-3ds

./: .gitmodules  Cargo.toml  build.rs  rust-toolchain.toml
.cargo/: config.toml
cpp/: CMakeLists.txt  DevkitArm3DS.cmake  README
cpp/cmake/: FindCITRO2D.cmake  export-libs.cmake
cpp/source/: processing.cpp
render/: Cargo.toml
render/examples/: pixels.rs
render/src/: blend.rs  effects.rs  encoding.rs  lib.rs  lights.rs  texture.rs  texture_data.rs  timer.rs
render/src/scene/: mod.rs
render/src/scene/terminal/: buffer.rs  mod.rs
res/: top_check.rgb
src/: api.rs  flow.rs  main.rs  settings_storage.rs  spmc_buffer.rs  ui.rs
src/camera/: mod.rs  y2r_ctx.rs
src/qr/: ffi.rs  mod.rs
src/ui/: mod.rs
