[workspace]
resolver = "3"
members = [
    ".",
    "render",
]

[package]
name = "baam"
version = "0.1.0"
edition = "2024"
authors = ["⭐NINIKA⭐"]
description = "A baam client for your 3DS"

[dependencies]
render = { path = "render" }

# NOTE: not pinning concrete versions of these packages to unify the version used with dependencies like `pthread-3ds`
# concrete versions are then pinned using a cargo patch
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
# citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs.git", rev = "bb643c72aaa647d91bd422317fe59aed225dce32" }

anyhow = "1.0.102"

ureq = { version = "3.3.0", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "json"] }
rustls-rustcrypto = "0.0.2-alpha"

serde = { version = "1.0.228", features = ["derive"] }

url = "2.5.8"

async-channel = "2.5.0"
async-broadcast = "0.7.2"
oneshot = "0.1.10"
futures = "0.3.32"
blocking = "1.6.2"

serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.23"

imgref = "1.12.0"

bytemuck = "1.25.0"

[build-dependencies]
cc = "1.2.58"
cmake = "0.1.58"

[package.metadata.cargo-3ds]
authors = ["NINIKA"]
name = "baam"
icon_path = "res/icon.png"

[patch.'https://github.com/rust3ds/ctru-rs.git']
# HACK: an extra slash to fool cargo's normalization https://github.com/rust-lang/cargo/issues/5478#issuecomment-518026540
# ctru-rs = { git = "https://github.com/rust3ds//ctru-rs.git", rev = "786af2bdb43b2f178afc59f4f9d07c410235556f" }
# ctru-sys = { git = "https://github.com/rust3ds//ctru-rs.git", rev = "786af2bdb43b2f178afc59f4f9d07c410235556f" }

# using a fork because we want more SVC abstractions and y2r module support
ctru-rs = { git = "https://github.com/DCNick3/ctru-rs.git", rev = "dca2232519daab667d05826090d275be1df43a85" }
ctru-sys = { git = "https://github.com/DCNick3/ctru-rs.git", rev = "dca2232519daab667d05826090d275be1df43a85" }

# pin the version of pthread-3ds
[patch.'https://github.com/rust3ds/pthread-3ds.git']
pthread-3ds = { git = "https://github.com/rust3ds//pthread-3ds.git", rev = "5d9e47ae75fcdbdbf38cc0d9314daeb3c508c75e" }
